--- a/package.json
+++ b/package.json
@@ -11,47 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^10.0.6",
-    "@angular/animations": "^7.0.3",
-    "@angular/cdk": "^7.2.0",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/material": "^7.2.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
+    "@angular/animations": "^10.0.10",
+    "@angular/cdk": "^10.1.3",
+    "@angular/common": "~10.0.10",
+    "@angular/compiler": "~10.0.10",
+    "@angular/core": "~10.0.10",
+    "@angular/forms": "~10.0.10",
+    "@angular/http": "~7.2.16",
+    "@angular/material": "^10.1.3",
+    "@angular/platform-browser": "~10.0.10",
+    "@angular/platform-browser-dynamic": "~10.0.10",
+    "@angular/router": "~10.0.10",
     "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
+    "core-js": "^3.6.5",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ngx-toastr": "^13.0.0",
     "node-sass": "^4.14.1",
-    "npm": "^6.14.8",
     "popper.js": "^1.14.4",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "rxjs": "~6.6.2",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular/cli": "~10.0.6",
+    "@angular/compiler-cli": "~10.0.10",
+    "@angular/language-service": "~10.0.10",
+    "@types/jasmine": "~3.5.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "@types/node": "~14.6.0",
+    "codelyzer": "~6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.1.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.10.2",
+    "tslint": "~6.1.3",
+    "typescript": "~3.9.7"
   }
 }
